--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sadad</h1>
+    <h1>thanks</h1>
     <form action="/form">
         <label for="adi">E-posta</label>
         <input type="text" name="eposta" required/>
