--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>thanks</h1>
-    <form action="/form">
+    <form method="post">
         <label for="adi">E-posta</label>
         <input type="text" name="eposta" required/>
         <label for="sifre">Şifre</label>
